src/gateway-service/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    spec.ingressClassName: addon-http-application-routing
spec:
  rules:
    - host: a4cc78c7acc09458087ac6a5ab27280c-1518162385.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
